@@ -121,7 +121,14 @@ void c_compile(int prefix, string srcDir, list cfiles)
     string compiler;
     string file;
 
-    compiler = COMPILER + " -c -o " + srcDir + "/o/" + (string)prefix;
+    compiler = COMPILER;
+
+    #ifdef PROFILE
+        compiler += " " PROFILE " ";
+    #endif
+
+    compiler +=  " -c -o " + srcDir + "/o/" + (string)prefix;
+
     md(srcDir + "/o");
 
     for (idx = sizeof(cfiles); idx--; )
