@@ -1,9 +1,17 @@
 void program()
 {
+    string lopt;
+
+    #ifdef PROFILE
+        lopt = PROFILE;
+    #else
+        lopt = "-s";
+    #endif
+
     library(0);
 
     exec(COMPILER, "-o", g_binary,
-            "-lbisonc++", libs, "-L.", libpath , "-s");
+            "-lbisonc++", libs, "-L.", libpath , lopt);
 
     exit(0);
 }
