@@ -4,7 +4,12 @@ bisonc++ (1.5.3)
 
   * Using Bobcat's FnWrap* classes instead of Bobcat's Wrap* classes
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Feb 2007 15:11:31 +0100
+  * The INSTALL.im file has received a (by default commented out) 
+    #define PROFILE. By activating this define, bisonc++ is compiled with
+    support for the gprof profiler. This define should not be activated for
+    production versions of bisonc++
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 17 Feb 2007 20:44:19 +0100
 
 bisonc++ (1.5.2)
 
